docs: add documentation for createOpening
